@@ -28,11 +28,15 @@ function GetReceipt($id)
 {
 	global $CONFIG, $DB;
 	
-	if($receipt = $DB->GetRow('SELECT documents.*, users.name AS user, template
+	if($receipt = $DB->GetRow('SELECT documents.*, users.name AS user, template,
+					div.name AS d_name, div.address AS d_address,
+					div.zip AS d_zip, div.city AS d_city
 				FROM documents 
 				LEFT JOIN users ON (userid = users.id)
 				LEFT JOIN numberplans ON (numberplanid = numberplans.id)
-				WHERE type = 2 AND documents.id = ?', array($id)))
+				LEFT JOIN customers c ON (documents.customerid = c.id)
+				LEFT JOIN divisions div ON (div.id = c.divisionid)
+				WHERE documents.type = 2 AND documents.id = ?', array($id)))
 	{
 		$receipt['contents'] = $DB->GetAll('SELECT * FROM receiptcontents WHERE docid = ? ORDER BY itemid', array($id));
 		$receipt['total'] = 0;
